--- a/v2/package.json
+++ b/v2/package.json
@@ -6,7 +6,8 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.11.2",
-        "tailwindcss": "^3.3.2"
+        "tailwindcss": "^3.3.2", 
+        "@firebase/auth": "^1.11.1"
     },
     "devDependencies": {
         "vite": "^4.3.9",
