--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main  # or whatever branch you want to trigger on
+  workflow_dispatch:
 
 jobs:
   build-and-deploy:
