--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           npm install
           npm install firebase
-          node src/gen-sitemap.js
+          node src/gen-sitemap.mjs
           git init 
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
