--- a/v2/package.json
+++ b/v2/package.json
@@ -2,6 +2,7 @@
     "name": "sl-v2",
     "version": "2.0.0",
     "private": true,
+    "type": "module", 
     "dependencies": {
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
