--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
           git config user.email "actions@github.com"
           git add . 
           git commit -m "Generate Sitemap" 
-          git push --force origin main
+          git push
           npm run build
 
       - name: Deploy to Codeberg Pages
