--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,42 +3,62 @@ name: Build and Deploy to Codeberg Pages
 on:
   push:
     branches:
-      - main  # or whatever branch you want to trigger on
+      - main
   workflow_dispatch:
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    environment: CODEBERG
 
     steps:
-      - name: Checkout code
+      # 1️⃣ Checkout the current repo
+      - name: Checkout current repo
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Needed to push commits back
 
+      # 2️⃣ Set up Node.js
       - name: Set up Node
         uses: actions/setup-node@v4
         with:
           node-version: 18
 
-      - name: Install and Build
+      # 3️⃣ Install dependencies, generate sitemap, and push to current repo
+      - name: Generate Sitemap and Commit
         working-directory: v2
         run: |
           npm install
           npm install firebase
           node src/gen-sitemap.mjs
-          git init 
+
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
-          git add . 
-          git commit -m "Generate Sitemap" 
-          git push
-          npm run build
 
-      - name: Deploy to Codeberg Pages
+          # Add sitemap only if it exists
+          git add public/sitemap.xml || git add sitemap.xml
+          git commit -m "Generate Sitemap" || echo "No changes to commit"
+
+          # Push sitemap commit to the current repo
+          git push origin main
+
+      # 4️⃣ Build the site
+      - name: Build Site
+        working-directory: v2
+        run: npm run build
+
+      # 5️⃣ Deploy the build to Codeberg Pages
+      - name: Deploy Build to Codeberg Pages
         run: |
           cd v2/dist
+
+          git init
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
+
           git add .
           git commit -m "Deploy from GitHub Actions"
+
           git branch -M main
           git remote add origin https://KRXZY_KRXZY:${{ secrets.CODEBERG_TOKEN }}@codeberg.org/snaplabs/pages.git
+
           git push --force origin main
