--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,6 +59,6 @@ jobs:
           git commit -m "Deploy from GitHub Actions"
 
           git branch -M main
-          git remote add origin https://KRXZY_KRXZY:${{ secrets.CODEBERG_TOKEN }}@codeberg.org/snaplabs/pages.git
+          git remote add origin https://KRXZY:${{ secrets.CODEBERG_TOKEN }}@codeberg.org/snaplabs/pages.git
 
           git push --force origin main
